--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 
         /* BMO-style screen */
     .card {
-    background: var(--mint-green);   /* light mint inside */
-    width: 300px;                    /* fixed width (like a screen) */
-    height: 220px;                   /* height for screen shape */
-    border-radius: 20px;             /* smooth rounded corners */
-    border: 6px solid #2d9c7a;       /* darker green outline (like BMO's frame) */
+    background: var(--mint-green);   
+    width: 850px;                    
+    height: 450px;                  
+    border-radius: 20px;           
+    border: 2px solid #000000;       
     position: relative;
     display: grid;
     place-items: center;
     }
 
-
-    /* Two black dots inside */
     .eyes {
       display: flex;
-      gap: 60%;
-      width: 30%;
+      gap: 450%;
+      width: 100%;
       justify-content: center;
       align-items: center;
-      transform: translateY(-8%); /* nudge up slightly */
+      transform: translateY(-8%); 
     }
 
     .eye {
@@ -50,8 +48,7 @@
       background: var(--dot);
       border-radius: 50%;
     }
-
-    
+  
   </style>
 </head>
 <body>
