--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <title>Green Rounded Rectangle with Dots</title>
   <style>
     :root {
-      --outer-green: #5bb39e;   /* outer layer */
-      --mint-green:  #b7f7d3;   /* inside rectangle */
-      --dot: #000000;           /* black dots */
+      --outer-green: #5bb39e;  
+      --mint-green:  #b7f7d3;  
+      --dot: #000000;        
     }
 
-    /* Green outer layer */
     body {
       margin: 0;
       min-height: 100vh;
@@ -21,7 +20,6 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
     }
 
-        /* BMO-style screen */
     .card {
     background: var(--mint-green);   
     width: 850px;                    
@@ -35,15 +33,15 @@
 
     .eyes {
       display: flex;
-      gap: 450%;
-      width: 100%;
+      gap: 200%;
+      width: 95%;
       justify-content: center;
       align-items: center;
       transform: translateY(-8%); 
     }
 
     .eye {
-      width: 5%;
+      width: 15%;
       aspect-ratio: 1 / 1;
       background: var(--dot);
       border-radius: 50%;
