--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Green Rounded Rectangle with Dots</title>
+  <title>Talking BMO</title>
   <style>
     :root {
       --outer-green: #5bb39e;  
