--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
     .eyes {
       display: flex;
-      gap: 75%;
-      width: 15%;
-      justify-content: center;
+      gap: 80%;
+      width: 45%;
+      justify-content: space-between;
       align-items: center;
-      transform: translateY(-30%); 
+      transform: translateY(-300%); 
     }
 
     .eye {
-      width: 15%;
+      width: 20px;
       aspect-ratio: 1 / 1;
       background: var(--dot);
       border-radius: 50%;
